# ribbon_transform

./: .gitignore  CMakeLists.txt  main.cpp
ribbon/: CMakeLists.txt  ribbon.cpp  ribbon.h
